@@ -1,9 +1,8 @@
 package com.app.controllers;
 
-import java.io.IOException;
-import java.nio.file.Files;
-
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.core.io.ClassPathResource;
+import org.springframework.core.io.Resource;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -11,17 +10,28 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.io.IOException;
+import java.nio.charset.StandardCharsets;
+
+@Slf4j
 @RestController
 @RequestMapping("/custom-api-docs")
 public class OpenApiDocsController {
 
-    @GetMapping(value = "/openapi.json", produces = "application/json")
-    public ResponseEntity<byte[]> getOpenApiJson() throws IOException {
-        ClassPathResource resource = new ClassPathResource("openapi.json");
-        byte[] data = Files.readAllBytes(resource.getFile().toPath());
+    @GetMapping("/openapi.json")
+    public ResponseEntity<String> getOpenApiJson() {
+        try {
+            Resource resource = new ClassPathResource("openapi.json");
+            byte[] content = resource.getInputStream().readAllBytes();
+            String jsonContent = new String(content, StandardCharsets.UTF_8);
 
-        HttpHeaders headers = new HttpHeaders();
-        headers.add(HttpHeaders.CONTENT_TYPE, "application/json");
-        return new ResponseEntity<>(data, headers, HttpStatus.OK);
+            HttpHeaders headers = new HttpHeaders();
+            headers.add(HttpHeaders.CONTENT_TYPE, "application/json");
+
+            return new ResponseEntity<>(jsonContent, headers, HttpStatus.OK);
+        } catch (IOException e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body("Failed to load openapi.json: " + e.getMessage());
+        }
     }
 }
